<resources>
    <string name="app_name">In Apps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="login">Login</string>
    <string name="atau">atau</string>
    <string name="login_with_google">Login with google</string>
    <string name="forgot_password_long_text">Masukkan alamat email anda dan kami akan mengirim password akun anda</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_handphone">No Handphone</string>
    <string name="address">Alamat</string>
    <string name="terms_and_privacy_policy">By signing up, you agree to our Terms and Privacy Policy</string>
    <string name="belum_punya_akun">Belum punya akun?\u00A0</string>
    <string name="sudah_punya_akun">Sudah punya akun?\u00A0</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="text_continue">Continue</string>
    <string name="start">Get Started</string>
    <string name="introslider1_title">Hai Selamat Bergabung Di In Apps</string>
    <string name="introslider2_title">Satu Aplikasi Untuk Menemani Semua Kebutuhan Eventmu</string>
    <string name="introslider3_title">Dapatkan Diskon Menarik</string>
    <string name="introslider1_desc">Geser untuk mempelajari lebih lanjut</string>
    <string name="introslider2_desc">RENTAL alat event, CETAK kebutuhan event, DESAIN Poster, Pamflet, Banner, dll, INSTALL berbagai Software, OS, dan Game</string>
    <string name="introslider3_desc">Temukan kode promo dan kamu bisa menikmati diskon menarik dari In Apps</string>
    <string name="loggingin">Logging in...</string>
    <string name="login_gagal">Login gagal, silahkan coba kembali</string>
    <string name="complete_sign_in">Complete Sign In</string>
    <string name="selamat_datang_di_in_apps">Selamat Datang di In Apps</string>
    <string name="mau_pakai_jasa_apa_kak">Mau pakai jasa apa kak?</string>
    <string name="rental_in">Rental-In</string>
    <string name="desain_in">Desain-In</string>
    <string name="cetak_in">Cetak-In</string>
    <string name="install_in">Install-In</string>
    <string name="back_pressed_dashboard">Tekan kembali untuk keluar</string>
    <string name="dialogTitle">Logout Account</string>
    <string name="dialogMessage">Apakah anda yakin ingin keluar?</string>
    <string name="dialogTitleRemoveCart">Remove Item</string>
    <string name="dialogMessageRemoveCart">Hapus item dari keranjang belanja?</string>
    <string name="dialogTitleEditProfile">Simpan Perubahan?</string>
    <string name="dialogMessageEditProfile">Apakah anda yakin untuk menyimpan perubahan?</string>
    <string name="dialogTitleForgotPassword">Kirim email reset sandi?</string>
    <string name="dialogMessageForgotPassword">Lanjutkan mengirim email reset sandi?</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Rp. 140.000 / Hari</string>
    <string name="waktu_pencetakan_paling_cepat_3_hari">Waktu pencetakan paling cepat 3 hari</string>
    <string name="rental_activity">com.incorps.inapps.productsactivity.rental.</string>
    <string name="desain_activity">com.incorps.inapps.productsactivity.desain.</string>
    <string name="cetak_activity">com.incorps.inapps.productsactivity.cetak.</string>
    <string name="error_name">Nama Lengkap tidak boleh kosong</string>
    <string name="error_email">Email tidak boleh kosong</string>
    <string name="error_phone">No Handphone tidak boleh kosong</string>
    <string name="error_address">Alamat tidak boleh kosong</string>
    <string name="error_password">Password tidak boleh kosong</string>
    <string name="error_password_length">Password minimal 8 karakter</string>
    <string name="error_terms">Setujui syarat dan kebijakan privasi</string>
    <string name="keranjang_belanja">Keranjang Belanja</string>
    <string name="keranjang_kosong">Keranjang Kosong</string>
    <string name="yuk_belanja_sekarang_d">Sepertinya keranjang belanja anda sedang kosong. Yuk order layanan In-Apps sekarang :D</string>
    <string name="kembali_ke_menu">Kembali ke Menu</string>
    <string name="kritik_dan_saran">Kritik dan Saran</string>
    <string name="sampaikan_kritik_dan_saran">Sampaikan kritik dan saran...</string>
    <string name="rate_app">Beri Kami Nilai</string>
    <string name="about_us">Tentang Kami</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="pesanan_kosong">Pesanan Kosong</string>
    <string name="daftar_pemesanan_anda_sedang_kosong">Daftar pemesanan anda sedang kosong.</string>
    <string name="buka_keranjang_belanja">Buka Keranjang Belanja</string>
    <string name="alamat_incorps">Gedung Kewirausahaan Lantai 1 FEB Undip Tembalang, Semarang</string>
    <string name="url_alamat_incorps">https://goo.gl/maps/462q7GxWjY3V1EnHA</string>
    <string name="rekening_incorps">2020800260 (Bank Syariah Indonesia)</string>
    <string name="rekening_incorps_atas_nama">Linggar Maretva Cendani</string>
    <string name="hapus_pesanan">Hapus Pesanan</string>
    <string name="message_hapus_pesanan">Apakah anda yakin ingin menghapus pesanan?</string>
    <string name="link_whatsapp">https://api.whatsapp.com/send?phone=6282135462174</string>
    <string name="link_line">http://line.me/ti/p/~@tif5545x</string>
    <string name="link_instagram">https://www.instagram.com/in_corporation/</string>
    <string name="link_email">incorpsofficial@gmail.com</string>
    <string name="submit">Submit</string>
    <string name="selesaikan_proses_sign_in_dengan_melengkapi_data_data_berikut">Selesaikan proses Sign In dengan melengkapi data - data berikut</string>
    <string name="proceed">Proceed</string>
    <string name="proyektor_3000_lumens">Proyektor ≥3000 Lumens</string>
    <string name="tersedia_2">Tersedia : 2</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="spesifikasi">Spesifikasi</string>
    <string name="harga">Harga</string>
    <string name="lama_peminjaman">Lama Peminjaman</string>
    <string name="masukkan_jumlah_hari_peminjaman">Masukkan jumlah hari peminjaman</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="_21_maret_2021">21 Maret 2021</string>
    <string name="pukul">pukul</string>
    <string name="_12_00">12.00</string>
    <string name="sampai">sampai</string>
    <string name="quantity">Quantity</string>
    <string name="tanggal_peminjaman">Tanggal Peminjaman</string>
    <string name="decrease">-</string>
    <string name="_1">1</string>
    <string name="increase">+</string>
    <string name="foto_tanda_identitas">Foto Tanda Identitas</string>
    <string name="ktp_sim_ktm">(KTP/SIM/KTM)</string>
    <string name="ktp_linggar_jpg">ktp_linggar.jpg</string>
    <string name="file_uploaded">File Uploaded</string>
    <string name="organisasi">Organisasi</string>
    <string name="jika_tidak_ada_kosongkan_saja">Jika tidak ada, kosongkan saja</string>
    <string name="asal_organisasi_peminjam">Asal Organisasi Peminjam</string>
    <string name="pengambilan_barang">Pengambilan Barang</string>
    <string name="masukkan_alamat_pengantaran">Masukkan Alamat Pengantaran</string>
    <string name="total_harga">Total Harga</string>
    <string name="rp_75_000">Rp. 75.000</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="order_detail">Order Detail</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="_1_hari_24_jam">1 Hari (24 Jam)</string>
    <string name="senin_21_maret_2021">Senin, 21 Maret 2021</string>
    <string name="tanggal_pengembalian">Tanggal Pengembalian</string>
    <string name="_1_buah">1 Buah</string>
    <string name="madani_fsm_undip">Madani FSM Undip</string>
    <string name="di_antar">Di Antar</string>
    <string name="alamat_pengantaran">Alamat Pengantaran</string>
    <string name="jl_timoho_timur_1_no_6_bulusan_semarang">Jl. Timoho Timur 1 no. 6, Bulusan, Semarang</string>
    <string name="buka_di_maps">Buka di Maps</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="cod">COD</string>
    <string name="no_rekening_untuk_pembayaran_adalah_04052103990003">No Rekening untuk Pembayaran adalah 04052103990003</string>
    <string name="status_pesanan">Status Pesanan</string>
    <string name="dipesan">Dipesan</string>
    <string name="rp_140_000">Rp. 140.000</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="uploading">Uploading...</string>
    <string name="rp">Rp.&#160;</string>
    <string name="_75_000">75.000</string>
    <string name="jenis_desain">Jenis Desain</string>
    <string name="blocknote">Blocknote</string>
    <string name="deskripsi_desain">Deskripsi Desain</string>
    <string name="dibuatkan_terserah_editornya_saja_yang_penting_tema_nya_minimalis">Dibuatkan terserah editornya saja, yang penting tema-nya minimalis</string>
    <string name="waktu_pengerjaan">Waktu Pengerjaan</string>
    <string name="_5">5</string>
    <string name="hari">&#160;Hari</string>
    <string name="email_pengiriman_hasil_desain">Email Pengiriman Hasil Desain</string>
    <string name="linggarmc_gmail_com">linggarmc@gmail.com</string>
    <string name="file_pendukung">File Pendukung</string>
    <string name="download_file_pendukung">Download File Pendukung</string>
    <string name="file_desain">File Desain</string>
    <string name="download_file_desain">Download File Desain</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="atas_nama">Atas Nama</string>
    <string name="desc_checkout">Info pesanan dapat dilihat di menu "Orders"</string>
    <string name="masukkan_daftar_os_jika_lebih_dari_satu_pisahkan_dengan_koma"><b>Masukkan daftar OS</b> (jika lebih dari satu, pisahkan dengan koma)</string>
    <string name="masukkan_daftar_software_jika_lebih_dari_satu_pisahkan_dengan_koma"><b>Masukkan daftar Software</b> (jika lebih dari satu, pisahkan dengan koma)</string>
    <string name="masukkan_daftar_game_jika_lebih_dari_satu_pisahkan_dengan_koma"><b>Masukkan daftar Game</b> (jika lebih dari satu, pisahkan dengan koma)</string>
    <string name="pengambilan_laptop_sehabis_install">Pengambilan Laptop (Sehabis Install)</string>
    <string name="upload_file_gagal">Upload File Gagal</string>
    <string name="deskripsi_proyektor_atas_tiga_ribu">
        Proyektor ≥3000 Lumens yang tersedia ada 2 jenis, yaitu Epson EB-S300 dan ViewSonic PJ513. Pemesanan proyektor sudah termasuk include Kabel Power, Kabel VGA, Kabel Converter, dan Remote (Jika diperlukan).
    </string>
    <string name="spesifikasi_proyektor_atas_tiga_ribu">
        - Interface : Comp IN, RCA; S-Video; HDMI (MHL Not Supported); 1 USB Type-A/B.\n
        - Colour Light Output : 3000 Lumens.\n
        - Contrast Ratio : 15000 : 1\n
        - Keystone : Correction : Auto V-Keystone; H-Keystone Slider.\n
        - Resolusi : SVGA\n
        - Pengaturan Teknologi : Quick Corner\n
        - Berat : 2.4 Kg\n
        - WiFi : ELPAP10\n
    </string>
    <string name="harga_proyektor_atas_tiga_ribu">
        - <b>Paket KKN</b> : Rp. 900.000 (42 hari)\n
        - <b>Paket Reguler</b> : Rp. 140.000/ hari\n
        - <b>Paket 12 jam</b> : Rp. 100.000\n
        - <b>Paket 6 jam</b> : Rp. 70.000
    </string>
</resources>