<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/img_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_arrow_back_24" />

    <ImageView
        android:layout_width="@dimen/margin_huge"
        android:layout_height="@dimen/margin_huge"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_large"
        android:src="@drawable/ic_baseline_lock_24" />

    <TextView
        style="@style/textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/lupa_password"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/forgot_password_long_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset"
        style="@style/textAppearanceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"
        android:paddingVertical="@dimen/margin_medium"
        android:paddingHorizontal="@dimen/margin_huge"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="@dimen/margin_huge" />

</LinearLayout>