<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    tools:context=".fragments.orders.OrderedFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical"
        android:gravity="center">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/orders_empty"/>

        <TextView
            style="@style/textAppearanceHeadline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/pesanan_kosong" />

        <TextView
            style="@style/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/daftar_pemesanan_anda_sedang_kosong"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_back_to_menu"
            style="@style/textAppearanceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:paddingVertical="@dimen/margin_medium"
            android:paddingHorizontal="@dimen/margin_large"
            android:text="@string/buka_keranjang_belanja"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="@dimen/margin_large" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ini"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ordered"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_order_rental" />

</LinearLayout>